--- a/Dunlin/Frontend/dunlin/src/components/Pages/History.css
+++ b/Dunlin/Frontend/dunlin/src/components/Pages/History.css
@@ -43,3 +43,17 @@
     font-weight: bold;
   }
   
+  .delete-button{
+    background-color: #dc3545;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin-left: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
